[package]
name = "digital-garden-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.2"
directories = "5.0.0"
edit = "0.1.4"
rprompt = "2.0.2"
slug = "0.1.4"
structopt = "0.3.26"

[dev-dependencies]
assert_cmd = "2.0.10"
